fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ a:hover {
 
 header {
   text-align: center;
-  padding: 3em 0;
+  padding: 3em 0 1.5em;
 }
 
 h1 {
